# JengaAPIPythonWrapper

./: .coveragerc  .coveralls.yml  .gitignore  Pipfile  README.md  README.rst  api_call.py  conftest.py  requirements.txt  setup.cfg  test_file.py
.github/workflows/: codeql.yml  pytest.yml
docs/source/: conf.py  index.rst  usage.rst
src/: privatekey.pem  utils.py
src/jengaapi/: __init__.py  account_services.py  auth.py  exceptions.py  mpgs_direct_integration.py  receive_money_queries_services.py  receive_money_services.py  send_money_imt_services.py  send_money_queries_services.py  send_money_services.py  uncategorized_services.py  utils.py
src/jengaapi/configs/: config.py
src/jengaapi/services/: miscellaneous_services.py
tests/: test_account_services.py  test_auth.py  test_authorization_services.py  test_miscellaneous_services.py  test_receive_money_queries_services.py  test_receive_money_services.py  test_send_money_queries_services.py  test_send_money_services.py  test_uncategorized_services.py  testkey.pem
