[metadata]
name = jenga-api-wrapper
version = 0.0.1
author = Maina Kamau
author_email = lewiikamaa8@gmail.com
description = The Equity Bank Jenga API python wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 2-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src