[metadata]
name = jengaapi
version = 0.1
description = A python wrapper for the Jenga API.
long_description = file: README.rst
url = https://www.activecodar.com/
author = Maina Kamau
author_email = lewiikamaa8@gmail.com
license = BSD-2-Clause
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests==2.26.0
    pycryptodome==3.10.1

[options.packages.find]
where = src